overflow bug

--- a/app/static/welcome.css
+++ b/app/static/welcome.css
@@ -1,4 +1,5 @@
 html {
   scroll-behavior: smooth;
+  overflow: git;
 }
 /*# sourceMappingURL=welcome.css.map */
